                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 13-08-2004 fixed: VP4/5/6 dlls should work again
  - 13-08-2004 changed: Scan and Shortcuts are no longer in My Programs by default.  The option to re-enable is in Settings->My Programs.
  - 13-08-2004 added: [ 986344 ] CDG (Karaoke) support patch for MP3
  - 12-08-2004 changed: My Programs database layout changed again.  Changed database name so no need to remove existing database first
  - 12-08-2004 added: My Programs path tag can now contain direct link to XBE (Ex: <path>E:\apps\,C:\retailxboxdash.xbe</path>
  - 12-08-2004 fixed: Default tag in My Programs no longer needs to be the same as the path tag for the bookmark
  - 12-08-2004 fixed: Improved My Programs speed in displaying bookmarks and cleaned up some code
  - 11-08-2004 fixed: small bug in resizing algorithm of videos meant zoom (using START) sometimes
                      did not zoom correctly (particularly when the movie ratio is 4:3)
  - 11-08-2004 added: .cue sheet support for gapless playback of media files.  Make sure the
                      underlying media file is CBR so as to allow accurate seeking of the start
                      and end of each track.
  - 11-08-2004 added: initial database support for multiple artists and genres.  Fields separated with "/" are
                      broken up and added individually.  Also, Ogg and Flac files that have multiple ARTIST and
                      GENRE fields should pickup all the fields now.  Database format has changed.
  - 11-08-2004 added:  working QuickTime dll's, that means we now have audio for QuickTime trailers using the QDMC/QDM2 audio codec ;)